syntax = "proto3";

option csharp_namespace = "FizzBuzz.Demo.App";

package numbers;

service Number {
  // Sends the numbers async
  rpc GetNumbers(NumbersRequest) returns (stream NumberResult);
}

// The request message containing the amount of numbers to return.
message NumbersRequest {
  int32 max = 1;
}

// The response message containing the number.
message NumberResult {
  int32 id = 1;
  string word = 2;
  string binary = 3;
}
